# lifesmart-for-homeassistant

./: .flake8  .gitignore  CHANGELOG.md  DEVICE_MAPPING_UPDATE_REPORT.md  DUPLICATE_CLEANUP_PROGRESS.md  README.md  README_CN.md  codecov.yml  comprehensive_mapping_analysis.py  conftest.py  hacs.json  info.md  pyproject.toml  pytest.ini  sensor平台重构报告.md  troubleshooting.md  troubleshooting_cn.md  测试重构指南.md  重构实施报告.md
.github/: PULL_REQUEST_TEMPLATE.md  claude-app-smoke.md
.github/ISSUE_TEMPLATE/: 1_bug_report.md  1_bug_report.yml  1_bug_report_cn.md  1_bug_report_cn.yml  2_feature_request.md  2_feature_request.yml  2_feature_request_cn.md  2_feature_request_cn.yml  🌠-功能需求.md  🐛-反馈缺陷.md
.github/workflows/: claude-code-review.yml  claude.yml  fossa.yml  haas-vali.yml  hacs-release-packaging-guardrail.yml  hacs-vali.yml  issue-auto-close.yml  issue-autocomment.yml  release.yml  test.yml  translate-issue.yml
.testing/: device_mapping_analysis.py  mapping_report.py  test_ci_locally.sh  version_mapping.sh
.testing/mapping_tool/: QUICK_START.md  README.md  RUN.py  RUN_THIS_TOOL.py  analysis_strategies.py  install-full-mode.sh  main.py  optimized_core_utils.py  optimized_document_parser.py  performance_comparison.py  regex_cache.py  requirements.txt  run_tool.sh
custom_components/: __init__.py
custom_components/lifesmart/: __init__.py  air_quality.py  binary_sensor.py  button.py  camera.py  client_base.py  climate.py  compatibility.py  config_flow.py  const.py  cover.py  diagnostics.py  entity.py  event.py  exceptions.py  fan.py  helpers.py  hub.py  lifesmart_client.py  lifesmart_protocol.py  light.py  lock.py  manifest.json  number.py  remote.py  scene.py  sensor.py  services.py  services.yaml  siren.py  switch.py  test_env_compatibility.py  valve.py
custom_components/lifesmart-iot/: binary_sensor.py  const.py  cover.py  manifest.json  sensor.py
docs/: DUAL_FORK_SOLUTION.md  LifeSmart 云平台服务接口 - ZigBeeAPI.md  LifeSmart 云平台服务接口 - 超级碗.md  LifeSmart 云平台服务接口.md  LifeSmart 智慧设备规格属性说明.md  PYTHON310_DUAL_FORK_SOLUTION.md  README.ja.md  README.ko.md  README.ru.md  README.zh-CN.md  api-regions.md
docs/readme-animation/: README.md  package-lock.json  package.json  tsconfig.json
docs/readme-animation/src/: data.ts  (+3 more)
docs/temporary/: DUAL_FORK_SOLUTION.md  devices.py.old  mapping_original_backup.py
quality/: README.md  USAGE.md
quality/ci-cd/: quality-gate.py  test_quality_gate.py
quality/configs/: quality-config.json
quality/mcp-analysis/: continuous-analysis.py  mcp-config.json
scripts/: check_hacs_release_packaging.py
tmp/: 2026-05-06-runtime-partial-pass-followup.md
(+194 files in other folders)
